@@ -1,3 +1,11 @@
+2008-05-21  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/sse-noavx.s: Add tests for movdq2q and movq2dq.
+	* gas/i386/x86-64-sse-noavx.s: Likewise.
+
+	* gas/i386/sse-noavx.d: Updated.
+	* gas/i386/x86-64-sse-noavx.d: Likewise.
+
 2008-05-09  Catherine Moore  <clm@codesourcery.com>
 
 	* gas/mips/mips16-hilo-match.s: New test.
